Tue Sep 21 10:30:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/notification/monitor.html:
        * docs/orbsvcs.html:
        * orbsvcs/DevGuideExamples/NotifyService/EventSequence/run_test.pl:
        * orbsvcs/DevGuideExamples/NotifyService/Filtering/run_test.pl:
        * orbsvcs/DevGuideExamples/NotifyService/Messenger/run_test.pl:
        * orbsvcs/DevGuideExamples/NotifyService/OfferSubscriptions/run_test.pl:
        * orbsvcs/DevGuideExamples/NotifyService/QoSProperties/run_test.pl:
        * orbsvcs/DevGuideExamples/NotifyService/RTNotify/run_test.pl:
        * orbsvcs/DevGuideExamples/ValueTypes/Notify/run_test.pl:
        * orbsvcs/Notify_Service/Notify_Service.mpc:
        * orbsvcs/examples/Notify/Filter/run_test.pl:
        * orbsvcs/examples/Notify/Lanes/run_test.pl:
        * orbsvcs/examples/Notify/Subscribe/run_test.pl:
        * orbsvcs/examples/Notify/ThreadPool/run_test.pl:
        * orbsvcs/tests/Bug_3387_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
        * orbsvcs/tests/Notify/Blocking/run_test.pl:
        * orbsvcs/tests/Notify/Bug_1385_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_1884_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2415_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_2561_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646a_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3688_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Discarding/run_test.pl:
        * orbsvcs/tests/Notify/Lanes/run_test.pl:
        * orbsvcs/tests/Notify/MC/run_test.pl:
        * orbsvcs/tests/Notify/MT_Dispatching/run_test.pl:
        * orbsvcs/tests/Notify/Ordering/run_test.pl:
        * orbsvcs/tests/Notify/Persistent_Filter/run_test.pl:
        * orbsvcs/tests/Notify/Persistent_POA/run_test.pl:
        * orbsvcs/tests/Notify/Reconnecting/run_test.pl: