@@ -306,7 +306,7 @@ $hostname = $rp_manager->HostName ();
 $port = $rp_manager->RandomPort ();
 
 $RM = $rp_manager->CreateProcess ("$ENV{'TAO_ROOT'}/orbsvcs/FT_ReplicationManager" .
-                                  "$build_directory/FT_ReplicationManager",
+                                  "$build_directory/tao_ft_replicationmanager",
                                   "-o $rp_manager_ior " .
                                   "-ORBEndpoint iiop://$hostname:$port");
 my($RMC);
