@@ -257,7 +257,7 @@ $client3->DeleteFile ($replica6_ior);
 $client3->DeleteFile ($replica3_iogr);
 
 $RM = $rp_manager->CreateProcess ("$ENV{'TAO_ROOT'}/orbsvcs/FT_ReplicationManager" .
-                                  "$build_directory/FT_ReplicationManager",
+                                  "$build_directory/tao_ft_replicationmanager",
                                   "-o $rp_manager_ior " .
                                   "-ORBEndpoint iiop://$hostname:$port");
 
