@@ -1,3 +1,14 @@
+Tue Sep 21 11:04:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * NEWS:
+        * docs/orbsvcs.html:
+        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.mpc:
+        * orbsvcs/tests/FT_App/run_test_demo.pl:
+        * orbsvcs/tests/FT_App/run_test_registry.pl:
+        * orbsvcs/tests/FT_App/run_test_rmnotifier.pl:
+        * orbsvcs/tests/FT_App/run_test_rmregistry.pl:
+          Renamed FT_ReplicationManager to tao_ft_replicationmanager.
+
 Tue Sep 21 10:30:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * NEWS:
